--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <main>
 
         <header>
-            <h1>cursos gratis</h1>
+            <h1>cursos gratis na plataforma</h1>
         </header>
         <article>
-            <h2>curso 1</h2>
-            <p>artigo do curso 1</p>
+            <h2>curso de HTML 5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nesciunt ipsa ducimus explicabo porro iste dignissimos ullam, culpa quos quia hic nemo, illum impedit natus rem rerum at ipsam saepe?</p>
         </article>
         <article>
-            <h2>Curso 2</h2> 
-            <p>artigo do curso 2</p>           
+            <h2>java script</h2> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum omnis possimus labore repellendus nihil dolorem aliquid aliquam, incidunt deleniti magni quis eveniet iure ad ipsa magnam dolorum excepturi id debitis?</p>           
         </article>
 
     </main>
